--- a/package/pom.xml
+++ b/package/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -94,6 +94,26 @@
                         <embedded>
                             <groupId>${project.groupId}</groupId>
                             <artifactId>composum-platform-auth-bundle</artifactId>
+                            <target>/libs/composum/platform/install</target>
+                        </embedded>
+                        <embedded>
+                            <groupId>org.apache.santuario</groupId>
+                            <artifactId>xmlsec</artifactId>
+                            <target>/libs/composum/platform/install</target>
+                        </embedded>
+                        <embedded>
+                            <groupId>org.jboss.logging</groupId>
+                            <artifactId>jboss-logging</artifactId>
+                            <target>/libs/composum/platform/install</target>
+                        </embedded>
+                        <embedded>
+                            <groupId>org.bouncycastle</groupId>
+                            <artifactId>bcprov-jdk15on</artifactId>
+                            <target>/libs/composum/platform/install</target>
+                        </embedded>
+                        <embedded>
+                            <groupId>org.bouncycastle</groupId>
+                            <artifactId>bcpkix-jdk15on</artifactId>
                             <target>/libs/composum/platform/install</target>
                         </embedded>
                     </embeddeds>
