--- a/bundle/pom.xml
+++ b/bundle/pom.xml
@@ -220,10 +220,16 @@
         <!--<artifactId>keycloak-adapter-core</artifactId>-->
         <!--</dependency>-->
 
-        <!-- JUnit -->
+        <!-- Testing -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient-osgi</artifactId>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
