--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,14 @@
 				<version>1.4.2</version>
 			</dependency>
 
+			<!-- other libraries -->
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient-osgi</artifactId>
+				<version>4.5.6</version>
+				<scope>provided</scope>
+			</dependency>
+
 			<!-- Composum Platform -->
 			<dependency>
 				<groupId>com.composum.sling.platform</groupId>
@@ -175,6 +183,16 @@
 				<groupId>org.apache.santuario</groupId>
 				<artifactId>xmlsec</artifactId>
 				<version>2.1.2</version>
+			</dependency>
+
+
+			<!-- test -->
+			<dependency>
+				<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+				<groupId>org.junit.jupiter</groupId>
+				<artifactId>junit-jupiter-api</artifactId>
+				<version>5.3.2</version>
+				<scope>test</scope>
 			</dependency>
 
 		</dependencies>
