--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
 				<version>4.5.6</version>
 				<scope>provided</scope>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>3.8.1</version>
+				<scope>provided</scope>
+			</dependency>
 
 			<!-- Composum Platform -->
 			<dependency>
