--- a/package/pom.xml
+++ b/package/pom.xml
@@ -82,6 +82,9 @@
                             <root>/libs/composum/platform/auth</root>
                         </filter>
                         <filter>
+                            <root>/content/test/composum/authtest</root>
+                        </filter>
+                        <filter>
                             <root>/libs/composum/platform/install</root>
                             <includes>
                                 <include>.*/org.apache.sling.auth.*\.jar</include>
@@ -152,13 +155,16 @@
     <profiles>
 
         <profile>
-            <id>installBundle</id>
+            <id>installPackage</id>
         </profile>
         <profile>
-            <id>installPackage</id>
+            <id>installContent</id>
+        </profile>
+        <profile>
+            <id>installTestContent</id>
             <activation>
                 <property>
-                    <name>deploy.package</name>
+                    <name>deploy.testContent</name>
                     <value>true</value>
                 </property>
             </activation>
@@ -181,7 +187,7 @@
             </build>
         </profile>
         <profile>
-            <id>installTestContent</id>
+            <id>installMapping</id>
         </profile>
 
     </profiles>
