--- a/bundle/pom.xml
+++ b/bundle/pom.xml
@@ -84,6 +84,10 @@
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.commons.osgi</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.jcr.resource</artifactId>
+        </dependency>
 
         <!-- JCR API, Jackrabbit, VLT -->
         <dependency>
@@ -151,6 +155,10 @@
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.scr.annotations</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.jaas</artifactId>
         </dependency>
 
         <!-- Web Application API -->
