--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,14 @@
 				<version>1.4.2</version>
 			</dependency>
 
+			<!-- OSGI, Felix -->
+			<dependency>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>org.apache.felix.jaas</artifactId>
+				<version>1.0.2</version>
+				<scope>provided</scope>
+			</dependency>
+
 			<!-- other libraries -->
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
