--- a/bundle/pom.xml
+++ b/bundle/pom.xml
@@ -97,10 +97,20 @@
         <dependency>
             <groupId>org.apache.jackrabbit</groupId>
             <artifactId>jackrabbit-api</artifactId>
+            <version>2.16.3</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.jackrabbit</groupId>
             <artifactId>jackrabbit-jcr-commons</artifactId>
+            <version>2.16.3</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.jackrabbit</groupId>
+            <artifactId>oak-core</artifactId>
+            <version>1.8.8</version> <!-- FIXME version set explicitly from launchpad 11 for better debugging. -->
+            <scope>provided</scope>
         </dependency>
 
         <!-- JSON -->
