attemtpt at using service user - probably permissions needed

--- a/package/pom.xml
+++ b/package/pom.xml
@@ -92,6 +92,9 @@
                                 <include>.*/bcp.*\.jar</include>
                                 <include>.*/xmlsec.*\.jar</include>
                                 <include>.*/jboss-logging.*\.jar</include>
+                                <include>
+                                    .*/org.apache.sling.serviceusermapping.impl.ServiceUserMapperImpl.amended-platformauth.config
+                                </include>
                             </includes>
                         </filter>
                     </filters>
