--- a/package/pom.xml
+++ b/package/pom.xml
@@ -64,6 +64,33 @@
                 <artifactId>minify-maven-plugin</artifactId>
             </plugin>
 
+            <!-- embed the setup hook -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-bundles</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>${project.groupId}</groupId>
+                                    <artifactId>composum-platform-auth-setup</artifactId>
+                                    <outputDirectory>${project.build.directory}/vault-work/META-INF/vault/hooks
+                                    </outputDirectory>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
+                <inherited>false</inherited>
+            </plugin>
+
             <plugin>
                 <groupId>com.day.jcr.vault</groupId>
                 <artifactId>content-package-maven-plugin</artifactId>
@@ -138,6 +165,11 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>composum-platform-auth-bundle</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>composum-platform-auth-setup</artifactId>
             <version>${project.version}</version>
         </dependency>
 
