--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 
 	<modules>
 		<module>bundle</module>
-		<!-- <module>setup</module> -->
+		<module>setup</module>
 		<module>package</module>
 	</modules>
 
