--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<package.group>com/composum/platform</package.group>
 		<package.company>IST GmbH Dresden</package.company>
 		<bundle.category>composum,platform</bundle.category>
-		<composum.core.version>1.10.1-SNAPSHOT</composum.core.version>
+		<composum.core.version>1.10.1</composum.core.version>
 		<composum.platform.version>1.0.0-SNAPSHOT</composum.platform.version>
 		<sling.scheme>http</sling.scheme>
 		<sling.secure>false</sling.secure>
