--- a/setup/pom.xml
+++ b/setup/pom.xml
@@ -46,7 +46,7 @@
                         <configuration>
                             <artifactItems>
                                 <artifactItem>
-                                    <groupId>com.composum.sling.core</groupId>
+                                    <groupId>com.composum.sling.core.setup</groupId>
                                     <artifactId>composum-sling-core-setup-util</artifactId>
                                     <outputDirectory>${project.build.directory}/classes</outputDirectory>
                                 </artifactItem>
@@ -72,7 +72,7 @@
 
         <!-- Setup utilities -->
         <dependency>
-            <groupId>com.composum.sling.core</groupId>
+            <groupId>com.composum.sling.core.setup</groupId>
             <artifactId>composum-sling-core-setup-util</artifactId>
         </dependency>
 
