--- a/bundle/pom.xml
+++ b/bundle/pom.xml
@@ -42,6 +42,8 @@
                             com.composum.platform.auth.*
                         </Export-Package>
                         <Import-Package>
+                            com.composum.sling.core.*;version="[1.10,2.1)",
+                            com.composum.sling.nodes.*;version="[1.10,2.1)",
                             org.apache.felix.shell;resolution:=optional,
                             javax.annotation.*;version="[0,4)",
                             *
