--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 
 	<parent>
 		<groupId>com.composum.sling.platform</groupId>
-		<artifactId>composum-sling-platform</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<artifactId>composum-platform</artifactId>
+		<version>1.0.2-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.composum.platform</groupId>
@@ -86,13 +86,13 @@
 			<!-- Composum Platform -->
 			<dependency>
 				<groupId>com.composum.sling.platform</groupId>
-				<artifactId>composum-sling-platform-security-bundle</artifactId>
+				<artifactId>composum-platform-security-bundle</artifactId>
 				<version>${composum.platform.version}</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.composum.sling.platform</groupId>
-				<artifactId>composum-sling-platform-commons-bundle</artifactId>
+				<artifactId>composum-platform-commons-bundle</artifactId>
 				<version>${composum.platform.version}</version>
 				<scope>provided</scope>
 			</dependency>
