--- a/package/pom.xml
+++ b/package/pom.xml
@@ -123,6 +123,7 @@
                                 <include>
                                     .*/org.apache.sling.serviceusermapping.impl.ServiceUserMapperImpl.amended-platformauth.config
                                 </include>
+                                <include>.*/com.composum.sling.core.CoreConfigImpl.config</include>
                             </includes>
                         </filter>
                     </filters>
