Implement generic token store

--- a/bundle/pom.xml
+++ b/bundle/pom.xml
@@ -227,8 +227,14 @@
 
         <!-- Testing -->
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.composum.platform</groupId>
+            <artifactId>composum-platform-testing-testutil</artifactId>
+            <version>${composum.platform.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
