--- a/bundle/pom.xml
+++ b/bundle/pom.xml
@@ -59,6 +59,10 @@
             <groupId>com.composum.platform</groupId>
             <artifactId>composum-platform-security-bundle</artifactId>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>composum-platform-commons-bundle</artifactId>
+        </dependency>
 
         <!-- Composum Nodes (Core) -->
         <dependency>
