--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.composum.platform</groupId>
 		<artifactId>composum-platform</artifactId>
-		<version>1.0.4</version>
+		<version>1.0.6-SNAPSHOT</version>
 	</parent>
 
     <artifactId>composum-platform-auth</artifactId>
@@ -17,7 +17,7 @@
 
 	<properties>
 		<keycloak.version>4.8.3.Final</keycloak.version>
-		<composum.platform.version>1.0.4</composum.platform.version>
+		<composum.platform.version>1.0.6-SNAPSHOT</composum.platform.version>
 	</properties>
 
 	<modules>
