--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 		<groupId>com.composum.platform</groupId>
 		<artifactId>composum-platform</artifactId>
 		<version>1.0.6-SNAPSHOT</version>
+		<relativePath/>
 	</parent>
 
     <artifactId>composum-platform-auth</artifactId>
