--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.composum.platform</groupId>
 		<artifactId>composum-platform</artifactId>
-		<version>1.1.0</version>
+		<version>1.2.1-SNAPSHOT</version>
 		<relativePath/>
 	</parent>
 
@@ -18,7 +18,7 @@
 
 	<properties>
 		<keycloak.version>4.8.3.Final</keycloak.version>
-		<composum.platform.version>1.1.1-SNAPSHOT</composum.platform.version>
+		<composum.platform.version>1.2.1-SNAPSHOT</composum.platform.version>
 	</properties>
 
 	<modules>
