--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
     <artifactId>composum-platform-auth</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>pom</packaging>
 
     <name>Composum Platform Auth</name>
@@ -18,7 +18,7 @@
 
 	<properties>
 		<keycloak.version>4.8.3.Final</keycloak.version>
-		<composum.platform.version>1.2.1-SNAPSHOT</composum.platform.version>
+		<composum.platform.version>1.2.0</composum.platform.version>
 	</properties>
 
 	<modules>
