update from Composum Core to Composum Nodes

--- a/bundle/pom.xml
+++ b/bundle/pom.xml
@@ -71,8 +71,8 @@
 
         <!-- Composum Nodes (Core) -->
         <dependency>
-            <groupId>com.composum.sling.core</groupId>
-            <artifactId>composum-sling-core-commons</artifactId>
+            <groupId>com.composum.nodes</groupId>
+            <artifactId>composum-nodes-commons</artifactId>
         </dependency>
 
         <!-- Apache Sling -->
