--- a/sling-saml/package/pom.xml
+++ b/sling-saml/package/pom.xml
@@ -95,6 +95,7 @@
                             <root>/libs/composum/platform/config.local</root>
                             <includes>
                                 <include>.*/.*\.saml2\.AuthenticationHandlerSAML2~keycloak\.cfg\.json</include>
+                                <include>.*/.*\.saml2\.Saml2UserMgtService~keycloak\.cfg\.json</include>
                             </includes>
                         </filter>
                         <filter>
