--- a/selfmade/package/pom.xml
+++ b/selfmade/package/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>com.composum.platform</groupId>
-        <artifactId>composum-platform-auth</artifactId>
+        <artifactId>composum-platform-auth-self</artifactId>
         <version>1.1.0</version>
     </parent>
 
