--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.composum.platform</groupId>
 		<artifactId>composum-platform</artifactId>
-		<version>1.4.0</version>
+		<version>1.6.0-SNAPSHOT</version>
 		<relativePath/>
 	</parent>
 
@@ -17,7 +17,7 @@
     <description>Maven parent for Composum Platform Auth services</description>
 
 	<properties>
-		<composum.platform.version>1.4.0</composum.platform.version>
+		<composum.platform.version>1.6.0-SNAPSHOT</composum.platform.version>
 	</properties>
 
 	<modules>
