settings for releases deployment to private 'istrepo' added

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
 
 	<properties>
 		<composum.platform.version>1.6.0-SNAPSHOT</composum.platform.version>
+		<release.repository.id>istrepo</release.repository.id>
+		<release.repository.url>https://repo.ist-software.com/repository/maven-releases</release.repository.url>
 	</properties>
 
 	<modules>
