--- a/pom.xml
+++ b/pom.xml
@@ -5,19 +5,19 @@
 	<parent>
 		<groupId>com.composum.platform</groupId>
 		<artifactId>composum-platform</artifactId>
-		<version>1.6.0-SNAPSHOT</version>
+		<version>1.6.0</version>
 		<relativePath/>
 	</parent>
 
     <artifactId>composum-platform-auth</artifactId>
-	<version>1.2.0-SNAPSHOT</version>
+	<version>1.2.0</version>
 	<packaging>pom</packaging>
 
     <name>Composum Platform Auth</name>
     <description>Maven parent for Composum Platform Auth services</description>
 
 	<properties>
-		<composum.platform.version>1.6.0-SNAPSHOT</composum.platform.version>
+		<composum.platform.version>1.6.0</composum.platform.version>
 		<release.repository.id>istrepo</release.repository.id>
 		<release.repository.url>https://repo.ist-software.com/repository/maven-releases</release.repository.url>
 	</properties>
@@ -25,7 +25,7 @@
 	<modules>
 		<module>sling-saml</module>
 		<module>keycloak/themes</module>
-		<module>selfmade</module>
+		<!--module>selfmade</module-->
 	</modules>
 
 	<scm>
