--- a/keycloak/themes/pom.xml
+++ b/keycloak/themes/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.composum.platform</groupId>
         <artifactId>composum-platform-auth</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0</version>
         <relativePath>../..</relativePath>
     </parent>
 
