--- a/selfmade/pom.xml
+++ b/selfmade/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.composum.platform</groupId>
 		<artifactId>composum-platform-auth</artifactId>
-		<version>1.2.0-SNAPSHOT</version>
+		<version>1.2.0</version>
 	</parent>
 
     <artifactId>composum-platform-auth-self</artifactId>
