--- a/sling-saml/package/pom.xml
+++ b/sling-saml/package/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.composum.platform</groupId>
         <artifactId>composum-platform-auth-saml</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0</version>
     </parent>
 
     <artifactId>composum-platform-auth-saml-package</artifactId>
@@ -118,8 +118,8 @@
                             <target>/libs/composum/platform/install</target>
                         </embedded>
                         <embedded>
-                            <groupId>org.apache.sling</groupId>
-                            <artifactId>org.apache.sling.auth.saml2</artifactId>
+                            <groupId>${project.groupId}</groupId>
+                            <artifactId>composum-platform-auth-sling-saml</artifactId>
                             <target>/libs/composum/platform/install</target>
                         </embedded>
                         <embedded>
@@ -149,8 +149,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.auth.saml2</artifactId>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>composum-platform-auth-sling-saml</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
