--- a/sling-saml/setup/pom.xml
+++ b/sling-saml/setup/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.composum.platform</groupId>
         <artifactId>composum-platform-auth-saml</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0</version>
     </parent>
 
     <artifactId>composum-platform-auth-saml-setup</artifactId>
