--- a/sling-saml/sling-saml/pom.xml
+++ b/sling-saml/sling-saml/pom.xml
@@ -23,7 +23,7 @@
     <groupId>com.composum.platform</groupId>
     <artifactId>composum-platform-auth-sling-saml</artifactId>
     <name>SAML2 Service Provider</name>
-    <version>1.2.1</version>
+    <version>1.2.2-SNAPSHOT</version>
     <description>A SAML2 Web-profile SSO Service Provider (Sling Authentication) that uses encrypted
         POST Binding for communicating security assertions from an identity provider such as Shibboleth.
     </description>
