--- a/sling-saml/bundle/pom.xml
+++ b/sling-saml/bundle/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.composum.platform</groupId>
         <artifactId>composum-platform-auth-saml</artifactId>
-        <version>1.2.1</version>
+        <version>1.2.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>composum-platform-auth-saml-bundle</artifactId>
