--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd ">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd ">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>com.composum.platform</groupId>
 		<artifactId>composum-platform</artifactId>
 		<version>1.7.0</version>
-		<relativePath/>
+		<relativePath />
 	</parent>
 
     <artifactId>composum-platform-auth</artifactId>
-	<version>1.2.2-SNAPSHOT</version>
+	<version>1.2.2</version>
 	<packaging>pom</packaging>
 
     <name>Composum Platform Auth</name>
@@ -31,7 +30,8 @@
 		<connection>scm:git:https://github.com/ist-dresden/composum-platform-auth.git</connection>
 		<developerConnection>scm:git:https://github.com/ist-dresden/composum-platform-auth.git</developerConnection>
 		<url>https://github.com/ist-dresden/composum-platform-auth.git</url>
-	</scm>
+	  <tag>composum-platform-auth-1.2.2</tag>
+  </scm>
 
 	<dependencyManagement>
 		<dependencies>
