--- a/sling-saml/sling-saml/pom.xml
+++ b/sling-saml/sling-saml/pom.xml
@@ -9,13 +9,12 @@
     License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS
     OF ANY KIND, either express or implied. See the License for the specific
     language governing permissions and limitations under the License. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>org.apache.sling</groupId>
         <artifactId>sling-bundle-parent</artifactId>
         <version>41</version>
-        <relativePath/>
+        <relativePath />
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -23,7 +22,7 @@
     <groupId>com.composum.platform</groupId>
     <artifactId>composum-platform-auth-sling-saml</artifactId>
     <name>SAML2 Service Provider</name>
-    <version>1.2.2-SNAPSHOT</version>
+    <version>1.2.2</version>
     <description>A SAML2 Web-profile SSO Service Provider (Sling Authentication) that uses encrypted
         POST Binding for communicating security assertions from an identity provider such as Shibboleth.
     </description>
@@ -53,7 +52,8 @@
         <connection>scm:git:https://github.com/ist-dresden/composum-platform.git</connection>
         <developerConnection>scm:git:https://github.com/ist-dresden/composum-platform.git</developerConnection>
         <url>https://github.com/ist-dresden/composum-platform.git</url>
-    </scm>
+      <tag>composum-platform-auth-1.2.2</tag>
+  </scm>
 
     <distributionManagement>
         <repository>
