--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.composum.platform</groupId>
 		<artifactId>composum-platform</artifactId>
-		<version>1.7.0</version>
+		<version>1.7.2-SNAPSHOT</version>
 		<relativePath />
 	</parent>
 
