--- a/sling-saml/package/pom.xml
+++ b/sling-saml/package/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.composum.platform</groupId>
         <artifactId>composum-platform-auth-saml</artifactId>
-        <version>1.2.3</version>
+        <version>1.2.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>composum-platform-auth-saml-package</artifactId>
