--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 
     <artifactId>composum-platform-auth</artifactId>
-	<version>1.2.3-SNAPSHOT</version>
+	<version>1.2.3</version>
 	<packaging>pom</packaging>
 
     <name>Composum Platform Auth</name>
@@ -30,7 +30,7 @@
 		<connection>scm:git:https://github.com/ist-dresden/composum-platform-auth.git</connection>
 		<developerConnection>scm:git:https://github.com/ist-dresden/composum-platform-auth.git</developerConnection>
 		<url>https://github.com/ist-dresden/composum-platform-auth.git</url>
-	  <tag>HEAD</tag>
+	  <tag>composum-platform-auth-1.2.3</tag>
   </scm>
 
 	<dependencyManagement>
